--- a/tools.html
+++ b/tools.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="assets/css/Footer-Dark.css">
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.19/css/dataTables.bootstrap4.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+    <link rel="stylesheet" href="assets/css/iframe.css">
     <link rel="stylesheet" href="assets/css/Logo.css">
 </head>
 
@@ -29,8 +30,7 @@
                                 <div
                                     class="dropdown-menu border-secondary" style="background-color: #eeeeee;color: #2a7bb6;"><a class="dropdown-item" style="font-size: 14px;color: #273039;" href="osteosort.html"><strong>OsteoSort</strong></a>
                                     <div class="dropdown-divider text-warning border-secondary"></div><a class="dropdown-item" style="font-size: 14px;color: #273039;" href="measurements.html"><strong>Measurement Standards</strong><br></a>
-                                    <div class="dropdown-divider border-secondary"></div><a class="dropdown-item" style="font-size: 14px;color: #273039;" href="anthrostats.html"><strong>AnthroStats</strong></a>
-                                    <div class="dropdown-divider border-secondary"></div><a class="dropdown-item" href="tools.html" style="color: #2a7bb6;font-size: 14px;"><strong>FA Analytical Tools</strong></a>
+                                    <div class="dropdown-divider border-secondary"></div><a class="dropdown-item" style="font-size: 14px;color: #2a7bb6;" href="tools.html"><strong>FA Analytical Tools</strong><br></a>
                                     <div class="dropdown-divider border-secondary"></div><a class="dropdown-item" href="QA3D.html" style="color: #273039;font-size: 14px;"><strong>QA3D</strong></a>
                                     <div class="dropdown-divider border-secondary"></div><a class="dropdown-item" href="CentroidBanding.html" style="color: #273039;font-size: 14px;"><strong>Centroid Banding</strong></a>
                                     <div class="dropdown-divider border-secondary"></div><a class="dropdown-item" href="MSPS.html" style="color: #273039;font-size: 14px;"><strong>MSPS</strong></a></div>
@@ -50,8 +50,8 @@
     <div class="col-auto col-md-12 col-xl-10 offset-xl-1 rounded" style="background-color: #eeeeee;"><div><br></div>
         <h4>Forensic Anthropology Tools</h4>
         <p>This table is a compilation of software tools in forensic anthropology and their associated attributes. If you wish to contribute or update any information, please email jjlynch [at] osteocoder [dot] com. For more information about computational
-            tools in forensic anthropology see&nbsp;<a href="http://dx.doi.org/10.5744/fa.2018.0025" target="_blank">http://dx.doi.org/10.5744/fa.2018.0025</a>.</p>
-        <p>Last Updated: 1 June 2019<br>Download:&nbsp;<a href="FA_tools.csv" target="_blank">CSV</a></p><div><br><br></div><table id="example" class="table compact table-striped table-hover" style="width:100%">
+            tools in forensic anthropology see&nbsp;<a href="http://dx.doi.org/10.5744/fa.2018.0025" target="_blank">http://dx.doi.org/10.5744/fa.2018.0025</a>.</p><iframe src="http://127.0.0.1:4894/" width="700" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+        <p>Last Updated: 1 June 2019<br>Download:&nbsp;<a href="FA_tools.csv" target="_blank">CSV</a></p><table id="example" class="table compact table-striped table-hover" style="width:100%">
 <thead>
        <tr>
               <th>Tool</th>
@@ -82,13 +82,6 @@
               <td>Closed</td>
               <td>None</td>
               <td>Ancestry</td>
-          </tr>
-       <tr>
-           <td><a href="http://osteocoder.com/anthrostats.html", target="_blank">AnthroStats</a></td>
-              <td>R</td>
-              <td>Open</td>
-              <td>GPLv2</td>
-              <td>Data Analysis</td>
           </tr>
        <tr>
               <td><a href="http://www.craniofacialidentification.com/computercode.html", target="_blank">BodyPlot</a></td>
@@ -250,13 +243,6 @@
               <td>Closed</td>
               <td>None</td>
               <td>Comparsion</td>
-          </tr>
-       <tr>
-           <td><a href="http://osteocoder.com/osteosort.html", target="_blank">OsteoShiny</a></td>
-              <td>R</td>
-              <td>Open</td>
-              <td>GPLv2</td>
-              <td>Commingled</td>
           </tr>
        <tr>
            <td><a href="http://osteocoder.com/osteosort.html", target="_blank">OsteoSort</a></td>
